# Ensimag-projects

./: README.md
ACOL/: CategorieTransaction.java  Compte.java  CompteAbstrait.java  Credit.java  Debit.java  Demo.java  Emprunt.java  README.md  RembourserEmprunt.java  TODO.txt  Transaction.java  TypeCompte.java  TypeTransaction.java  Utilisateur.java  Virement.java
CEP/: .CEPcache  autotest.res  log  tag.res
CEP/config/: autotest.mk  compile_RISCV.mk  directory.mk
CEP/program/: sequence_tag
CEP/vhd/: CPU_CND.vhd  CPU_PC.vhd
Database/: Connexion.java  Main.java  README.md  RemplissageTable.java
Database/UI/: Commander.java  Plats.java  Requetes.java  Restaurants.java  SeConnecter.java  TypeCommande.java
Database/modeles/: DateQuery.java  Query.java  ReqParam.java  Transaction.java
Database/scripts/: Projet BD.sql
Java_Project/: .gitignore  Makefile  rapport.odt
Java_Project/cartes/: carteSujet.map
Java_Project/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
MarcheTauxCPP/: README.md  architecture.md  foreign_asian_portfolio.json  foreign_perf_basket_portfolio.json  products.md  quanto_exchange_portfolio.json
MarcheTauxCPP/data/: call_currency_market.csv  call_currency_params.json  call_quanto_market.csv  call_quanto_params.json  foreign_asian_market.csv  foreign_asian_params.json  foreign_perf_basket_market.csv  foreign_perf_basket_params.json  quanto_exchange_market.csv  quanto_exchange_params.json
MarcheTauxCPP/data-benchmark/: call_currency_market.csv  call_currency_params.json  call_currency_portfolio.json  call_quanto_market.csv  call_quanto_params.json  call_quanto_portfolio.json  foreign_asian_market.csv  foreign_asian_params.json  foreign_asian_portfolio.json  foreign_perf_basket_market.csv  foreign_perf_basket_params.json  foreign_perf_basket_portfolio.json
MarcheTauxCPP/skeleton/: CMakeLists.txt  GlobalModel.cpp  GlobalModel.hpp  Hedger.cpp  MonteCarlo.cpp  MonteCarlo.hpp  Portfolio.cpp  Portfolio.hpp
MarcheTauxCPP/skeleton/Assets/: Asset.cpp  Asset.hpp  Currency.cpp  Currency.hpp  RiskyAsset.cpp
MarcheTauxCPP/skeleton/Options/: CallCurrency.cpp  CallCurrency.hpp  CallQuanto.cpp  CallQuanto.hpp  ForeignAsian.cpp  ForeignAsian.hpp  ForeignPerfBasket.cpp  ForeignPerfBasket.hpp  Option.hpp  QuantoExchange.cpp  QuantoExchange.hpp
MarcheTauxCPP/skeleton/Oracle/: FixedOracle.cpp  FixedOracle.hpp  GridOracle.cpp  GridOracle.hpp  Oracle.hpp
MarcheTauxCPP/skeleton/TimeHandler/: FixedTime.cpp  FixedTime.hpp  GridTime.cpp  GridTime.hpp  TimeHandler.cpp  TimeHandler.hpp
MarcheTauxCPP/skeleton/Tools/: Parser.cpp  Parser.hpp  TestParser.cpp  json_reader.cpp  json_reader.hpp
Opti_and_Algo/: .gitignore  Makefile  flemme.sh
Opti_and_Algo/src/: AOD.c  AOD.h  Needleman-Wunsch-recmemo.c  characters_to_base.c  characters_to_base.h  distanceEdition.c
Opti_and_Algo/tests/: Makefile-test
PCPD/: CheckArchive.py  PythonForModProg.py  README.md  architecture.md  pricer.tex
PCPD/data-hedge/: asian.json  basket.json  basket_1.json  (+4 more)
PCPD/pricer-skel/: AUTHORS.md  CMakeLists.txt  README.md
PCPD/pricer-skel/data/: asian.json  basket_1.json  basket_2.json  perf.json
PCPD/pricer-skel/src/: Asian.cpp  Asian.hpp  Basket.cpp  Basket.hpp  BlackScholesModel.cpp  BlackScholesModel.hpp  HedgingResults.cpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.hpp  Performance.cpp  Performance.hpp  PricingResults.cpp  json_helper.cpp  json_helper.hpp  mc_example.cpp  test_json_reader.cpp
PCPD/pricer-skel/tests/: test.cpp  test_en_t.cpp  test_hedging.cpp
Projet_Algo/: exemple_1.pts  exemple_3.pts  hello.py  main.py  pour_rendu.py
Python_Project/: .gitignore  README.md  approximate_pi.py  draw.py
Systematic_strategies/: PricingLibraryDoc.chm  Program.cs  README.md
TP/: .gitignore  README.md
TP/MonteCarlo/: CMakeLists.txt  README.md  tp1.cpp  tp2-1.cpp
TP/MonteCarlo/tp2/: tp2-1.cpp
TP/MonteCarlo/tp2/tp2-partie2/: BSCall.cpp  BSCall.hpp  MonteCarlo.cpp  MonteCarlo.hpp  lambda-gamma.ods  main.cpp
TP/MonteCarlo/tp3/: BSBarrier.cpp  BSBarrier.hpp  CMakeLists.txt  MonteCarlo.cpp  MonteCarlo.hpp  main.cpp
TP/MonteCarlo/tp4/: main.cpp
TP/MonteCarlo/tp5/: BSCall.cpp  BSCall.hpp  MonteCarlo.cpp  MonteCarlo.hpp  main.cpp
TP/MonteCarlo/tp6/: BSScheme.cpp  BSScheme.hpp  CMakeLists.txt  main.cpp
TP/MonteCarlo/tp7/: AsianOption.cpp  AsianOption.hpp  Heston.cpp  Heston.hpp  Model.cpp  Model.hpp  MonteCarlo.cpp  MonteCarlo.hpp  MultiLevelMonteCarlo.cpp  MultiLevelMonteCarlo.hpp  Option.hpp  mcpricer.cpp  mlmcpricer.cpp
TP/MonteCarlo/tp8/: BlackScholes.cpp  BlackScholes.hpp  MonteCarlo.cpp  MonteCarlo.hpp  main.cpp
TP/MonteCarlo/tp9/: AsianOption.cpp  AsianOption.hpp  BarrierOption.cpp  BarrierOption.hpp  BasketOption.cpp  BasketOption.hpp  BlackScholesModel.cpp  BlackScholesModel.hpp  CMakeLists.txt  FunctionalHedger.cpp  FunctionalHedger.hpp  Martingale.cpp  Martingale.hpp  MaxOption.cpp  MaxOption.hpp  Model.cpp  Model.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.cpp  Option.hpp  main_functionalHedging.cpp  simul-market.cpp
TP/SEPC/video/: CMakeLists.txt  README.md
TP/SEPC/video/src/: ensivideo.h  oggstream.c
TP/SEPC/video/tests/: pthcocci.pl
betterThanYesterday/: .gitlab-ci.yml  README.md  TODO.md
dac/: README.md  script.sh
deep-learning-for-pricing/: README.md
ethique/: README.md  esg_data.csv  main.ipynb  market_data.csv
gestionprodstruct/: README.md  README.txt  app.py
gestionprodstruct/Pricer/: CMakeLists.txt  GrpcPricer.proto  Portfolio.hpp  Pricer.cpp  Pricer.hpp  pricing_server.cpp  testPrice&Delta.cpp  testProduct_0.json
gestionprodstruct/Pricer/MonteCarlo/: GlobalModel.cpp  GlobalModel.hpp  MonteCarlo.cpp  MonteCarlo.hpp
gestionprodstruct/Pricer/Produit/: eurostralProduct.cpp  eurostralProduct.hpp  testPayoff.cpp
gestionprodstruct/Pricer/RiskyAssets/: Currency.cpp  RiskyAsset.hpp
gestionprodstruct/Pricer/TimeHandler/: TimeHandler.cpp  TimeHandler.hpp
(+817 files in other folders)
